fix for bug 188344 - forward a email as a attchment will be failed to display correctly r=ducarroz, sr=bienvenu, a=asa